<resources>
    <string name="app_name">CoupleLink</string>
    <string name="kakao_app_key">2c6cecef21fe51e4de395eee9a0a4bc0</string>

    <string name="menu_capsule">캡슐쪽지</string>
    <string name="menu_ban">금지어</string>
    <string name="menu_setting">설정</string>
    <string name="menu_my_page">마이페이지</string>

    <string name="str_confirm">완료</string>

    <string name="str_splash_title">COUPLELINK</string>
    <string name="str_splash_msg">비로소 내 마음이\n당신에게로</string>

    <string name="str_connection">연결하기</string>
    <string name="str_connection_txt">내 코드</string>
    <string name="str_connection_othercode_txt">상대방 코드</string>
    <string name="str_connection_othercode_hint">상대방 코드를 입력해주세요.</string>
    <string name="str_login_error">저장 중 문제가 생겼습니다. 다시 시도해주세요.</string>

    <string name="str_male">남성</string>
    <string name="str_female">여성</string>

    <string name="str_infoinput_name_hint">이름을 입력해주세요.</string>
    <string name="str_infoinput_birth_hint">생일을 입력해주세요.</string>
    <string name="str_infoinput_date_hint">사귄 날짜를 입력해주세요.</string>
    <string name="str_connection_error">*해당하는 코드가 존재하지 않습니다.</string>
    <string name="str_bannedterm">금지어</string>
    <string name="str_my_bannedterm">내 금지어</string>
    <string name="str_partner_bannedterm">상대방 금지어</string>
    <string name="str_bannedterm_hide">채팅 금지 후 공개</string>

    <string name="str_infoinput_date_format">%d년 %d월 %d일</string>
</resources>
