<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bannedterm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/righteousregular"
        android:text="@string/str_bannedterm"
        android:textColor="#9aaaff"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bannedterm_back_btn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_btn" />

    <LinearLayout
        android:id="@+id/bannedterm_my_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/bannedterm_partner_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bannedterm_title">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bannedterm_my_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/spoqahansanslight"
            android:text="@string/str_my_bannedterm"
            android:textColor="#a2a2a2"
            android:textSize="17sp" />

        <View
            android:id="@+id/bannedterm_my_line"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="22dp"
            android:background="#9aaaff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bannedterm_partner_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bannedterm_my_btn"
        app:layout_constraintTop_toBottomOf="@id/bannedterm_title">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bannedterm_partner_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/spoqahansanslight"
            android:text="@string/str_partner_bannedterm"
            android:textColor="#a2a2a2"
            android:textSize="17sp" />

        <View
            android:id="@+id/bannedterm_partner_line"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="22dp"
            android:background="#9aaaff" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bannedterm_contents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20.2dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bannedterm_my_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>